# Wisdom-education-platform

./: .gitignore  CI-CD-TEST-REPORT.md  CI-CD-TEST-SUMMARY.md  Check-Environment.ps1  IMPLEMENTATION-COMPLETE.md  PROJECT-HEALTH-FIXES-SUMMARY.md  PROJECT-HEALTH-REPORT.md  PROJECT-HISTORY-SUMMARY.md  PROJECT_STATUS.md  QUICK-START.md  README-SERVICES.md  README-UPDATED.md  README.md  REDIS-STARTUP-GUIDE.md  TEST-REPORT.md  check-services.bat  ecosystem.config.json  fix-property-tests.md  install-and-start-redis.ps1  optimization_report.md  optimize-tests.js  package-lock.json  package.json  quick-fix-all.bat  quick-test-check.bat  start-all-services.bat  start-redis.bat  start-services.bat  test-and-fix.bat  test-db-connection.js  test-redis-connection.js  test-rust-fallback.js  会话总结-2026-01-23.md  前端页面修复说明.md  学习平台集成-完整架构说明.md  当前问题诊断和解决方案.md  快速参考-当前状态.md  测试账号说明.md  问题解决完整报告.md  项目合并建议-FINAL.md  (+2 more)
backend/: .env.example  .eslintrc.cjs  CHECKPOINT-39-VERIFICATION.md  CI-CD-TEST-REPORT.md  README.md  jest.config.js  (+21 more)
rust-service/: .env.example  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  Untitled  build.rs
rust-service/protos/: rust_service.proto
rust-service/src/: crypto.rs  grpc_server.rs  lib.rs  main.rs  push_service.rs  similarity.rs
rust-service/tests/: crypto_properties.rs  grpc_properties.rs  push_service_properties.proptest-regressions  push_service_properties.rs
rust-wasm/: AUDIO_PREPROCESSING_API.md  BUILD_INSTRUCTIONS.md  CODE_STRUCTURE.md  Cargo.toml  README.md  build-and-deploy.bat  build-wasm.bat  copy-to-frontend.bat
rust-wasm/src/: lib.rs
(+1216 files in other folders)
