[package]
name = "edu-rust-service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.7"

# gRPC
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }

# 加密
aes-gcm = "0.10"
bcrypt = "0.15"
rand = "0.8"

# 工具库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
